syntax = "proto3";

package model;

option java_package = "com.moddenuncias.model";
option java_outer_classname = "DenunciaProto";

import "google/protobuf/empty.proto";
import "user.proto";
import "receta.proto";


service DenunciaService {
  rpc FindUnresolved(google.protobuf.Empty) returns (Denuncias) {}
  rpc AddDenuncia(Denuncia) returns (Denuncia) {}
  rpc ResolverDenuncia(google.protobuf.Empty) returns (Denuncia) {}
  rpc TraerDenuncia(Denuncia) returns (Denuncia) {}
}

message Denuncias {
  repeated Denuncia denuncia = 1;
}


message Denuncia {
  int32 id = 1;
  User user_id = 2;
  Receta receta_id = 3;
  string resuelta = 4;
  string motivo = 5;
}